yaplParser.py
# Generated from yapl.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class yaplParser ( Parser ):

    grammarFileName = "yapl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'{'", "'}'", "'('", "')'", "';'", "','", 
                     "'='", "'<-'", "'+'", "'-'", "'*'", "'/'", "'=='", 
                     "'!='", "'<'", "'>'", "'>='", "'<='", "'&&'", "'||'", 
                     "'true'", "'.'", "'false'", "'class'", "'inherits'", 
                     "'self'", "'SELF_TYPE'", "'else'", "'fi'", "'if'", 
                     "'while'", "'new'", "'isvoid'", "'not'", "'return'", 
                     "'int'", "'string'", "'bool'", "'void'" ]

    symbolicNames = [ "<INVALID>", "LBRACE", "RBRACE", "LPAREN", "RPAREN", 
                      "SEMI", "COMMA", "EQUALS", "ASSIGN", "PLUS", "MINUS", 
                      "MULT", "DIV", "EQ", "NEQ", "LT", "GT", "GT_EQ", "LT_EQ", 
                      "AND", "OR", "TRUE", "DOT", "FALSE", "CLASS", "INHERITS", 
                      "SELF", "SELF_TYPE", "ELSE", "FI", "IF", "WHILE", 
                      "NEW", "ISVOID", "NOT", "RETURN", "INT", "STRING_TYPE", 
                      "BOOL", "VOID", "ID", "TYPE_ID", "INTEGER", "STRING", 
                      "COMMENT", "WS" ]

    RULE_program = 0
    RULE_classDeclaration = 1
    RULE_classBody = 2
    RULE_attributeDeclaration = 3
    RULE_assignmentDeclaration = 4
    RULE_type = 5
    RULE_methodDeclaration = 6
    RULE_parameterList = 7
    RULE_parameter = 8
    RULE_statement = 9
    RULE_variableDeclaration = 10
    RULE_ifStatement = 11
    RULE_whileStatement = 12
    RULE_methodCallStatement = 13
    RULE_expressionStatement = 14
    RULE_returnStatement = 15
    RULE_expressionList = 16
    RULE_block = 17
    RULE_expression = 18

    ruleNames =  [ "program", "classDeclaration", "classBody", "attributeDeclaration", 
                   "assignmentDeclaration", "type", "methodDeclaration", 
                   "parameterList", "parameter", "statement", "variableDeclaration", 
                   "ifStatement", "whileStatement", "methodCallStatement", 
                   "expressionStatement", "returnStatement", "expressionList", 
                   "block", "expression" ]

    EOF = Token.EOF
    LBRACE=1
    RBRACE=2
    LPAREN=3
    RPAREN=4
    SEMI=5
    COMMA=6
    EQUALS=7
    ASSIGN=8
    PLUS=9
    MINUS=10
    MULT=11
    DIV=12
    EQ=13
    NEQ=14
    LT=15
    GT=16
    GT_EQ=17
    LT_EQ=18
    AND=19
    OR=20
    TRUE=21
    DOT=22
    FALSE=23
    CLASS=24
    INHERITS=25
    SELF=26
    SELF_TYPE=27
    ELSE=28
    FI=29
    IF=30
    WHILE=31
    NEW=32
    ISVOID=33
    NOT=34
    RETURN=35
    INT=36
    STRING_TYPE=37
    BOOL=38
    VOID=39
    ID=40
    TYPE_ID=41
    INTEGER=42
    STRING=43
    COMMENT=44
    WS=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(yaplParser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = yaplParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 38
                self.classDeclaration()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(yaplParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(yaplParser.CLASS, 0)

        def TYPE_ID(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.TYPE_ID)
            else:
                return self.getToken(yaplParser.TYPE_ID, i)

        def LBRACE(self):
            return self.getToken(yaplParser.LBRACE, 0)

        def classBody(self):
            return self.getTypedRuleContext(yaplParser.ClassBodyContext,0)


        def RBRACE(self):
            return self.getToken(yaplParser.RBRACE, 0)

        def INHERITS(self):
            return self.getToken(yaplParser.INHERITS, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclaration" ):
                return visitor.visitClassDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def classDeclaration(self):

        localctx = yaplParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(yaplParser.CLASS)
            self.state = 47
            self.match(yaplParser.TYPE_ID)
            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 48
                self.match(yaplParser.INHERITS)
                self.state = 49
                self.match(yaplParser.TYPE_ID)


            self.state = 52
            self.match(yaplParser.LBRACE)
            self.state = 53
            self.classBody()
            self.state = 54
            self.match(yaplParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassBodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attributeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.AttributeDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.AttributeDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.MethodDeclarationContext,i)


        def assignmentDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.AssignmentDeclarationContext)
            else:
                return self.getTypedRuleContext(yaplParser.AssignmentDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.StatementContext)
            else:
                return self.getTypedRuleContext(yaplParser.StatementContext,i)


        def getRuleIndex(self):
            return yaplParser.RULE_classBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassBody" ):
                listener.enterClassBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassBody" ):
                listener.exitClassBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassBody" ):
                return visitor.visitClassBody(self)
            else:
                return visitor.visitChildren(self)




    def classBody(self):

        localctx = yaplParser.ClassBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classBody)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17582532854786) != 0):
                self.state = 60
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 56
                    self.attributeDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 57
                    self.methodDeclaration()
                    pass

                elif la_ == 3:
                    self.state = 58
                    self.assignmentDeclaration()
                    pass

                elif la_ == 4:
                    self.state = 59
                    self.statement()
                    pass


                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_attributeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeDeclaration" ):
                listener.enterAttributeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeDeclaration" ):
                listener.exitAttributeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeDeclaration" ):
                return visitor.visitAttributeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def attributeDeclaration(self):

        localctx = yaplParser.AttributeDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attributeDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.type_()
            self.state = 66
            self.match(yaplParser.ID)
            self.state = 67
            self.match(yaplParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(yaplParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def SEMI(self):
            return self.getToken(yaplParser.SEMI, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_assignmentDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignmentDeclaration" ):
                listener.enterAssignmentDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignmentDeclaration" ):
                listener.exitAssignmentDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignmentDeclaration" ):
                return visitor.visitAssignmentDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def assignmentDeclaration(self):

        localctx = yaplParser.AssignmentDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assignmentDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(yaplParser.ID)
            self.state = 70
            self.match(yaplParser.ASSIGN)
            self.state = 71
            self.expression(0)
            self.state = 72
            self.match(yaplParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(yaplParser.INT, 0)

        def STRING_TYPE(self):
            return self.getToken(yaplParser.STRING_TYPE, 0)

        def TYPE_ID(self):
            return self.getToken(yaplParser.TYPE_ID, 0)

        def BOOL(self):
            return self.getToken(yaplParser.BOOL, 0)

        def VOID(self):
            return self.getToken(yaplParser.VOID, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = yaplParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3229815406592) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(yaplParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(yaplParser.ParameterListContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = yaplParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.type_()
            self.state = 77
            self.match(yaplParser.ID)
            self.state = 78
            self.match(yaplParser.LPAREN)
            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 3229815406592) != 0):
                self.state = 79
                self.parameterList()


            self.state = 82
            self.match(yaplParser.RPAREN)
            self.state = 83
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.ParameterContext)
            else:
                return self.getTypedRuleContext(yaplParser.ParameterContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(yaplParser.COMMA)
            else:
                return self.getToken(yaplParser.COMMA, i)

        def getRuleIndex(self):
            return yaplParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterList" ):
                return visitor.visitParameterList(self)
            else:
                return visitor.visitChildren(self)




    def parameterList(self):

        localctx = yaplParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.parameter()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==6:
                self.state = 86
                self.match(yaplParser.COMMA)
                self.state = 87
                self.parameter()
                self.state = 92
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = yaplParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.type_()
            self.state = 94
            self.match(yaplParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variableDeclaration(self):
            return self.getTypedRuleContext(yaplParser.VariableDeclarationContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(yaplParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(yaplParser.WhileStatementContext,0)


        def methodCallStatement(self):
            return self.getTypedRuleContext(yaplParser.MethodCallStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(yaplParser.ExpressionStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(yaplParser.ReturnStatementContext,0)


        def block(self):
            return self.getTypedRuleContext(yaplParser.BlockContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = yaplParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.variableDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.whileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 99
                self.methodCallStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 100
                self.expressionStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 101
                self.returnStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 102
                self.block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(yaplParser.TypeContext,0)


        def ID(self):
            return self.getToken(yaplParser.ID, 0)

        def EQUALS(self):
            return self.getToken(yaplParser.EQUALS, 0)

        def statement(self):
            return self.getTypedRuleContext(yaplParser.StatementContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_variableDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableDeclaration" ):
                listener.enterVariableDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableDeclaration" ):
                listener.exitVariableDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableDeclaration" ):
                return visitor.visitVariableDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def variableDeclaration(self):

        localctx = yaplParser.VariableDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_variableDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.type_()
            self.state = 106
            self.match(yaplParser.ID)
            self.state = 109
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==7:
                self.state = 107
                self.match(yaplParser.EQUALS)
                self.state = 108
                self.statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(yaplParser.IF, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(yaplParser.StatementContext)
            else:
                return self.getTypedRuleContext(yaplParser.StatementContext,i)


        def FI(self):
            return self.getToken(yaplParser.FI, 0)

        def ELSE(self):
            return self.getToken(yaplParser.ELSE, 0)

        def getRuleIndex(self):
            return yaplParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)




    def ifStatement(self):

        localctx = yaplParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(yaplParser.IF)
            self.state = 112
            self.match(yaplParser.LPAREN)
            self.state = 113
            self.expression(0)
            self.state = 114
            self.match(yaplParser.RPAREN)
            self.state = 115
            self.statement()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==28:
                self.state = 116
                self.match(yaplParser.ELSE)
                self.state = 117
                self.statement()


            self.state = 120
            self.match(yaplParser.FI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(yaplParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(yaplParser.LPAREN, 0)

        def expression(self):
            return self.getTypedRuleContext(yaplParser.ExpressionContext,0)


        def RPAREN(self):
            return self.getToken(yaplParser.RPAREN, 0)

        def statement(self):
            return self.getTypedRuleContext(yaplParser.StatementContext,0)


        def getRuleIndex(self):
            return yaplParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)




    def whileStatement(self):

        localctx = yaplParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(yaplParser.WHILE)
            self.state = 123
            self.match(yaplParser.LPAREN)
            self.state = 124
            self.expression(0)
            self.state = 125
            self.match(yaplParser.RPAREN)
            self.state = 126
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodCallStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(yaplParser.ID, 0)
